功能开发：匹配算法推荐